force-app/main/default/src/objects/PJN_Event_Values__c/PJN_Event_Values__c.object-meta.xml
<CustomObject>
    <description>Event codes and reason details.</description>
    <label>Event Values</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Values Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>