force-app/main/default/src/objects/PJN_Event_Values__c/fields/PJN_Case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup (Case) to get the program where this event is defined for.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Event Values</relationshipLabel>
    <relationshipName>Event_Values</relationshipName>
    <type>Lookup</type>
</CustomField>