force-app/main/default/src/objects/PJN_Event_Values__c/fields/PJN_Description__c.field-meta.xml
<CustomField>
    <fullName>PJN_Description__c</fullName>
    <description>Description of Event Values.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>