force-app/main/default/src/objects/PJN_Event_Values__c/fields/PJN_Event_Automation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_Automation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Event Automation record that groups codes together and controls the resulting actions.</description>
    <label>Event Automation</label>
    <referenceTo>PJN_Event_Automation__c</referenceTo>
    <relationshipLabel>Event Values</relationshipLabel>
    <relationshipName>Event_Values</relationshipName>
    <type>Lookup</type>
</CustomField>