force-app/main/default/src/objects/PJN_Event_Values__c/fields/PJN_Event_Grouping__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_Grouping__c</fullName>
    <description>High-level grouping of the event codes.</description>
    <label>Event Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>