force-app/main/default/src/objects/PJN_Event_Values__c/fields/PJN_Event_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_Value__c</fullName>
    <description>The text value related to the code. Pushed to the Event record for incoming Event updates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>