force-app/main/default/src/objects/PJN_Event_Values__c/fields/PJN_Status_Logic_Key__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status_Logic_Key__c</fullName>
    <description>Used to match an Event record with the correct Automation Record to trigger automated actions.</description>
    <formula>PJN_Case__r.PJN_Program__r.PJN_Program_DeveloperName__c  &amp; TEXT(PJN_Event_Grouping__c) &amp; PJN_Event_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Logic Key</label>
    <type>Text</type>
</CustomField>